--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@ p{font-size:20px}
 <div class="card">
   <h1>🎄 Merry Christmas 🎄</h1>
   <div class="tree">🎄</div>
-  <p>Chúc Dương một mùa Giáng Sinh vui vẻ, hạnh phúc</p>
-  <p>Và al chắc chắn sẽ là an lành nhé :))))</p>
+  <p>Tap on the screen!!!</p>
+  <p>Chúc Dương một mùa Giáng Sinh vui vẻ, hạnh phúc may mắn nhaaa💖</p>
+  <p>Chúc em có tất cả trừ vất vả (Nhớ là có anh nữa đó🫣)</p>
+  <p>Và mai thi tốt nhé iu. Hay thôi excellent đi🍀</p>
 </div>
 
 <!-- Nhạc (chạy khi có file noel.mp3 cùng thư mục) -->
@@ -30,7 +32,7 @@ p{font-size:20px}
   <source src="noel.mp3" type="audio/mpeg" />
 </audio>
 
-<div class="note">Bấm vào <b>màn hình</b> đi iuuu.</div>
+<div class="note">Và <b>al</b> sẽ là an lành nhé iuu:))).</div>
 
 <script>
 let played=false;
